CSS: Fix overflow and change design of lg screens

--- a/src/Pages/ProducerHome/index.css
+++ b/src/Pages/ProducerHome/index.css
@@ -1,6 +1,7 @@
 /* IDS */
 
-#input_producer, #select_producer {
+#input_producer,
+#select_producer {
   text-transform: uppercase;
   padding: 10px;
   border: none;
@@ -16,8 +17,8 @@
   margin-top: 10px;
 }
 
-#btn_producer-submit{
-  background-color: #D44D5C;
+#btn_producer-submit {
+  background-color: #d44d5c;
   color: white;
   border: none;
   width: 70%;
@@ -33,8 +34,8 @@
 }
 
 #btn_producer-submit:hover {
-  box-shadow: 5px 5px #D44D5C;
-  color: #D44D5C;
+  box-shadow: 5px 5px #d44d5c;
+  color: #d44d5c;
   background-color: #ffffff;
 }
 
@@ -79,6 +80,18 @@
   text-align: center;
 }
 
+.producer_results_empty {
+  background-color: rgba(119, 51, 68, 1);
+  color: #ffffff;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.card_list {
+  color: #0b0014;
+}
+
 .home_producer_container {
   display: flex;
   flex-direction: column;
@@ -92,7 +105,8 @@
 /* MEDIA QUERIES */
 
 @media screen and (min-width: 768px) {
-  .producer_searchbar, .producer-filter_container {
+  .producer_searchbar,
+  .producer-filter_container {
     margin: 40px 60px;
   }
 
@@ -112,12 +126,12 @@
 @media screen and (min-width: 1280px) {
   .home_producer_container {
     flex-direction: row;
-    padding: 0 30px;
+    padding: 0px;
   }
 
   .producer_searchbar {
     margin: 0;
-    padding: 30px 30px 0 0;
+    padding: 30px 30px;
     flex: 1;
   }
 
@@ -127,36 +141,98 @@
   }
 
   .producer-filter_container {
-    padding: 20px;
     margin: 0;
     flex: 2;
     background-color: #e3b5a4;
     height: 100vh;
+    overflow-y: scroll;
+  }
+  .producer-filter_category {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 20px;
   }
 
   .producer-filter_text {
     text-align: left;
     position: relative;
+    padding: 0 20px;
   }
 
   .producer-filter_p {
     position: absolute;
   }
+  .producer_results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.3) 63.16%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/home_chairs.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    mix-blend-mode: normal;
+  }
+
+  .producer_results_empty {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.3) 63.16%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/home_chairs.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    mix-blend-mode: normal;
+    height: fill;
+    color: white;
+  }
 }
 
 @media screen and (min-width: 1920px) {
   .home_producer_container {
-    padding: 0 40px;
     font-size: 1.8vh;
   }
 
   .producer_searchbar {
     flex: 1;
-    padding: 50px 30px 0 0;
+    padding: 50px 30px;
   }
 
   .producer-filter_container {
     flex: 3;
-    padding: 40px;
+    overflow-y: scroll;
+  }
+
+  .producer-filter_category {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 20px;
+  }
+
+  .producer_results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.3) 63.16%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/home_chairs.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    mix-blend-mode: normal;
   }
 }
